# pratt_calc

./: .dir-locals.el  README.md  pratt_calc  pyproject.toml
.github/workflows/: ci-build.yml  ci.yml  publish-to-test-pypi.yml  publish.yml
src/minimal_pratt/: __init__.py  main.py  parser.py  tokenizer.py
src/pratt_calc/: README.md  __init__.py  evaluator.py  main.py  parser.py  repl.py  tokenizer.py
test/: nested_blocks.txt  source.txt  source_comments.txt  test_arith.py  test_call.py  test_registers.py  test_source.py
