[project]
name = "pratt_calc"
version = "0.1.0"
description = "Arithmetic calculator which uses a Pratt parser"
readme = "README.md"
authors = [
    { name = "Brandon C. Irizarry", email = "brandon.irizarry@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "more-itertools>=10.8.0",
]

[project.scripts]
pratt_calc = "pratt_calc:run"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportMissingTypeStubs=false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "pytest>=9.0.0",
    "ruff>=0.14.3",
]
